alpha console Huffman